--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "googleapis": "^144.0.0",
     "mongoose": "^8.4.1",
     "nodemailer": "^6.9.13"
   },
@@ -30,3 +31,4 @@
     "node": ">=18.0.0"
   }
 }
+
